--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,29 +1,71 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+/* fonte e cor do site */
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
-h1{
-    font-size: 2.5rem;
-    font-weight: 700;
+
+.nav-item{
+    cursor: pointer;
 }
-h2{
-    font-size:1.8rem;
-    font-weight: 600;
+
+
+/* quadrado transparente que circula o link */
+.nav-item:hover {
+    background-color: #726f6f;
+  }
+
+/* opcional: remove o sublinhado do link e a bolinha do lado*/
+a:active {
+    color: rgb(255, 255, 255);
+    list-style-type: none;
 }
-h3{
-    font-size:1.4rem;
-    font-weight: 800;
+
+
+/* link que ainda não foi visitado */
+a:link {
+    color: #333;
 }
-h4{
-    font-size:1.1rem;
-    font-weight: 600;
+ 
+ /* link que foi visitado */
+ a:visited{
+    color: #333;
 }
-h5{
-    font-size:1rem;
-    font-weight: 400;
-    color: #1d1d1d;
+/* edição das frases do site */
+.frase{
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
-h6{
-    color: #d8d8d8;
+
+/* alinhando o titulo */
+.lancamentos{
+    margin-left: 80px;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
+/* alinhando o titulo */
+.promocoes{
+    margin-left: 80px;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+ /* deixando rodape black */
+ .rodape{
+    text-align: center;
+    background-color:#d2d2d2;
+    height: 200px;
+    list-style: none;
+    padding-top: 40px;
+    margin-top: 20px;  
+}
+
+.rodape ul li a{
+    color: rgb(255, 255, 255);
+    text-align: center;
+    background-color:  #d2d2d2;
+    list-style-type: none;
 }
